# Arrest_Demographics_Disparity

./: .gitignore  README.md  pyproject.toml
outputs/reports/: analysis_report.md
src/: __init__.py  clustering.py  data_acquisition.py  data_processing.py  main.py  rrr_analysis.py  visualization.py
tests/: test_analysis.py
