[project]
name = "arrest-demographics-disparity"
version = "0.1.0"
description = "FBI arrest demographics disparity analysis using Relative Risk Ratios and clustering"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "modin[ray]>=0.28.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
